css/style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans);
body {
    font-family: "Open Sans";
    font-size: 12px;
    width: auto;
	width: 970px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

input{
    border-radius: 5px;
    border-bottom-color: #b3b3b3;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-left-color: #b3b3b3;
    border-left-style: solid;
    border-left-width: 1px;
    border-right-color: #b3b3b3;
    border-right-style: solid;
    border-right-width: 1px;
    border-top-color: #b3b3b3;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    border-top-style: solid;
    border-top-width: 1px;
    padding: 5px;
}
textarea{
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}



h1 {
    color: navy;
    font-size:40px;
}

.activity{
    -webkit-border-radius: 5 5 0 0;
    -moz-border-radius: 5 5 0 0;
    border-radius: 5px 5px 0px 0px;
}

/*button-style generated with http://css3buttongenerator.com/*/
button {
    background: #eb3232;
    background-image: -webkit-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -moz-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -ms-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -o-linear-gradient(top, #eb3232, #b81a1a);
    background-image: linear-gradient(to bottom, #eb3232, #b81a1a);
    -webkit-border-radius: 5;
    -moz-border-radius: 5;
    border-radius: 5px;
    font-family: Arial;
    color: #ffffff;
    font-size: 30px;
    padding: 10px 20px 10px 20px;
    border: solid #1f628d 0px;
    text-decoration: none;
}
button:hover {
    background: #f70000;
    background-image: -webkit-linear-gradient(top, #f70000, #e62222);
    background-image: -moz-linear-gradient(top, #f70000, #e62222);
    background-image: -ms-linear-gradient(top, #f70000, #e62222);
    background-image: -o-linear-gradient(top, #f70000, #e62222);
    background-image: linear-gradient(to bottom, #f70000, #e62222);
    text-decoration: none;
}
#navigation{

    padding: 5px;
    padding-top:5px;
    resize: none;
    display: flex;
    justify-content: space-around;
}

.activityImage{
     border-radius: 5px 5px 0px 0px;
     -webkit-border-radius: 5 5 0 0;
    -moz-border-radius: 5 5 0 0;
    background-size:cover;
    height:200px;
    position:relative;
}



.itemTable{
    text-align: left;
    padding:0px 10px 10px 10px;
}



.newEventTable{
    border-radius: 5px;
    border-bottom-color: #b3b3b3;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-left-color: #b3b3b3;
    border-left-style: solid;
    border-left-width: 1px;
    border-right-color: #b3b3b3;
    border-right-style: solid;
    border-right-width: 1px;
    border-top-color: #b3b3b3;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    border-top-style: solid;
    border-top-width: 1px;
    /* padding: 5px; */
    text-align: left;
    padding: 10px;
    padding-top: 10px;
    padding-bottom: 5px;
}

input[type=submit]{
    text-align: right;
    float: right;
    background: #eb3232;
    background-image: -webkit-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -moz-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -ms-linear-gradient(top, #eb3232, #b81a1a);
    background-image: -o-linear-gradient(top, #eb3232, #b81a1a);
    background-image: linear-gradient(to bottom, #eb3232, #b81a1a);
    -webkit-border-radius: 14;
    -moz-border-radius: 14;
    border-radius: 5px;
    font-family: Arial;
    color: #ffffff;
    /* font-size: 20px; */
    padding: 5px 10px 5px 10px;
    border: solid #1f628d 0px;
    text-decoration: none;
}

.roomitem
{
    width: 380px;
    max-height: 300px;
    height: 300px;
}

.activityitem
{
    width: 320px;
    max-height: 600px;
    height: 500px;
}

.itemvaluename
{
    vertical-align: top;
}

.lastitem
{
    display: inline-block;
    overflow: hidden;
    border: 1px solid #c5c5c5;
    margin-right: 15px;
    margin-top: 15px;
    padding: 10px;
    float: left;
}

.item
{
    display: inline-block;
    overflow: hidden;
    border: 1px solid #c5c5c5;
    margin-right: 15px;
    margin-top: 15px;
    float: left;
     border-radius: 5px;
     -webkit-border-radius: 5;
    -moz-border-radius: 5;
}
.message{
    color: green;
    font-size: 40px;
}

.deleteButton{
    position:absolute;
    bottom:0px;
    right:0px;
    background-image: url("../data/pictures/delete.png");
    background-size: 20px 20px;
    background-repeat: none;
    background-repeat: no-repeat;
    background-position: center;
    height: 40px;
    width: 40px;
}
.deleteButton:hover{
    background-image: url("../data/pictures/delete.png");
    background-size: 22px 22px;
    background-repeat: none;
    background-repeat: no-repeat;
    background-position: center;
}


.editButton{
    position:absolute;
    bottom:0px;
    right:40px;
    background-image: url("../data/pictures/edit.png");
    background-size: 20px 20px;
    background-repeat: none;
    background-repeat: no-repeat;
    background-position: center;
    height: 40px;
    width: 40px;
}
.editButton:hover{
    background-image: url("../data/pictures/edit.png");
    background-size: 22px 22px;
    background-repeat: none;
    background-repeat: no-repeat;
    background-position: center;
}

